--- a/stile.css
+++ b/stile.css
@@ -8,24 +8,24 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 header{
+    display: flex;
     background-color: #39a6b2;
     padding: 20px 30px;
 }
-header h1{
+header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
-    display: inline;
-}
+  }
 header a{
+    flex-wrap: wrap;
     text-decoration: none;
     color: #fce138;
 }
-header nav{
-    float:right;
+header nav {
     margin: 7px 0;
-}
+  }
 header nav ul li{
     display: inline;
 }
